--- a/fish.spec.in
+++ b/fish.spec.in
@@ -15,6 +15,8 @@ BuildRoot:              %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_
 
 Requires:		bc
 Requires:               python
+Requires:		which
+Requires:		man
 
 %description
 
